Add back Recents fragment
Change-Id: Idc9a1ae06f05a3c0dd658057121de49e63440957

--- a/res/menu/activity_main_drawer.xml
+++ b/res/menu/activity_main_drawer.xml
@@ -19,6 +19,11 @@
                 android:icon="@drawable/ic_notif"
                 android:title="@string/notificaitons_title" />
             <item
+                android:id="@+id/nav_recents"
+                android:checkable="true"
+                android:icon="@drawable/ic_recents"
+                android:title="@string/recents_panel_title" />
+            <item
                 android:id="@+id/nav_lockscreen"
                 android:checkable="true"
                 android:icon="@drawable/ic_lockscreen"
