--- a/res/xml/recent_panel_layout.xml
+++ b/res/xml/recent_panel_layout.xml
@@ -25,6 +25,15 @@
     <PreferenceCategory
         android:title="@string/visuals">
 
+        <ListPreference
+            android:key="immersive_recents"
+            android:title="@string/immersive_recents_title"
+            android:summary="@string/immersive_recents_summary"
+            android:dialogTitle="@string/immersive_recents_dialog_title"
+            android:entries="@array/immersive_recents_entries"
+            android:entryValues="@array/immersive_recents_values"
+            android:persistent="false" />
+
     </PreferenceCategory>
 
 </PreferenceScreen>
