Add membar to recents options [2/2]
AICPfy CheckBox -> Switch

Change-Id: I68c7252fd542be4b681eb1c54e25be978b03db09

--- a/res/xml/recent_panel_layout.xml
+++ b/res/xml/recent_panel_layout.xml
@@ -25,6 +25,12 @@
     <PreferenceCategory
         android:title="@string/visuals">
 
+        <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
+            android:key="systemui_recents_mem_display"
+            android:title="@string/systemui_recents_mem_display_title"
+            android:summary="@string/systemui_recents_mem_display_summary"
+            android:defaultValue="false" />
+
         <ListPreference
             android:key="immersive_recents"
             android:title="@string/immersive_recents_title"
