AE: Add a HeadsUp customization fragment and switch
Thanks to @beanstown106 for bringing up to N

Change-Id: I5bc2c7f567f035e8f894852444cf3e4c3cea361d

--- a/res/menu/activity_main_drawer.xml
+++ b/res/menu/activity_main_drawer.xml
@@ -14,6 +14,11 @@
                 android:icon="@drawable/ic_statusbar"
                 android:title="@string/statubar_title" />
             <item
+                android:id="@+id/nav_headsup"
+                android:checkable="true"
+                android:icon="@drawable/ic_notif"
+                android:title="@string/nav_headsup_title" />
+            <item
                 android:id="@+id/nav_notif_drawer"
                 android:checkable="true"
                 android:icon="@drawable/ic_notif"
