Battery bar: possibility to blend colors between full/empty [2/2]
- Blend colors using the HSV color model
- Also add a setting for reversing the blend direction (HSV has a circular color spectre)

Change-Id: Ied8ce45cfba229dcb796b8f58130dde2cb41b010

--- a/res/xml/battery_bar.xml
+++ b/res/xml/battery_bar.xml
@@ -45,6 +45,18 @@
         android:title="@string/battery_bar_battery_low_color"
         android:defaultValue="0xffffffff" />
 
+    <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
+        android:key="battery_bar_blend_color"
+        android:title="@string/battery_bar_blend_color_title"
+        android:summary="@string/battery_bar_blend_color_summary" />
+
+    <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
+        android:key="battery_bar_blend_color_reverse"
+        android:title="@string/battery_bar_blend_color_reverse_title"
+        android:summaryOn="@string/battery_bar_blend_color_reverse_summary_on"
+        android:summaryOff="@string/battery_bar_blend_color_reverse_summary_off"
+        android:dependency="battery_bar_blend_color" />
+
     <ListPreference
         android:key="battery_bar_style"
         android:title="@string/battery_bar_style_title"
