Battery bar: blend colors between full/empty [2/2]
- Blend colors using the HSV color model
- Add a setting for reversing the blend direction (HSV has a circular color spectre)
- Add a setting for disabling custom charging color so blended colors can be used there as well

Change-Id: Ied8ce45cfba229dcb796b8f58130dde2cb41b010

--- a/res/xml/battery_bar.xml
+++ b/res/xml/battery_bar.xml
@@ -36,14 +36,34 @@
         android:defaultValue="0xffffffff" />
 
     <net.margaritov.preference.colorpicker.ColorPickerPreference
-        android:key="battery_bar_charging_color"
-        android:title="@string/battery_bar_charging_color"
-        android:defaultValue="0xffffffff" />
-
-    <net.margaritov.preference.colorpicker.ColorPickerPreference
         android:key="battery_bar_battery_low_color"
         android:title="@string/battery_bar_battery_low_color"
         android:defaultValue="0xffffffff" />
+
+    <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
+        android:key="battery_bar_enable_charging_color"
+        android:title="@string/battery_bar_use_charging_color"
+        android:defaultValue="true" />
+
+    <net.margaritov.preference.colorpicker.ColorPickerPreference
+        android:key="battery_bar_charging_color"
+        android:title="@string/battery_bar_charging_color"
+        android:defaultValue="0xffffffff"
+        android:dependency="battery_bar_enable_charging_color" />
+
+    <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
+        android:key="battery_bar_blend_color"
+        android:title="@string/battery_bar_blend_color_title"
+        android:summary="@string/battery_bar_blend_color_summary"
+        android:defaultValue="false" />
+
+    <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
+        android:key="battery_bar_blend_color_reverse"
+        android:title="@string/battery_bar_blend_color_reverse_title"
+        android:summaryOn="@string/battery_bar_blend_color_reverse_summary_on"
+        android:summaryOff="@string/battery_bar_blend_color_reverse_summary_off"
+        android:dependency="battery_bar_blend_color"
+        android:defaultValue="false" />
 
     <ListPreference
         android:key="battery_bar_style"
