Fix advanced tile and title switches to obey
Change-Id: I0c91d57baf0f224a7b4904d62f5ebe2baaedaf44

--- a/res/xml/notifications_layout.xml
+++ b/res/xml/notifications_layout.xml
@@ -41,17 +41,18 @@
         android:summary="@string/quick_settings_vibrate_summary"
         android:defaultValue="false"/>
 
-    <SwitchPreference
+    <com.lordclockan.aicpextras.preferences.SecureSettingSwitchPreference
         android:key="qs_data_advanced"
         android:title="@string/qs_advanced_data_title"
         android:summary="@string/qs_advanced_data_summary"
         android:defaultValue="false" />
 
-    <SwitchPreference
+    <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
         android:key="qs_tile_title_visibility"
         android:title="@string/qs_menu_item_titles"
-        android:summary="@string/qs_menu_item_titles_summary"
-        android:defaultValue="false" />
+        android:summaryOn="@string/qs_menu_item_titles_summaryOn"
+        android:summaryOff="@string/qs_menu_item_titles_summaryOff"
+        android:defaultValue="true" />
 
     <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
         android:key="music_tile_title"
