--- a/res/xml/notifications_layout.xml
+++ b/res/xml/notifications_layout.xml
@@ -41,13 +41,13 @@
         android:summary="@string/quick_settings_vibrate_summary"
         android:defaultValue="false"/>
 
-    <SwitchPreference
+    <com.lordclockan.aicpextras.preferences.SecureSettingSwitchPreference
         android:key="qs_data_advanced"
         android:title="@string/qs_advanced_data_title"
         android:summary="@string/qs_advanced_data_summary"
         android:defaultValue="false" />
 
-    <SwitchPreference
+    <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
         android:key="qs_tile_title_visibility"
         android:title="@string/qs_menu_item_titles"
         android:summary="@string/qs_menu_item_titles_summary"
