Battery Saver Easy Toggle [2/2]
Change-Id: Ic3b9723abf99ff8f603db1b8b5d4ba1af8c5cc87
Signed-off-by: Varun Date <date.varun123@gmail.com>

--- a/res/xml/notifications_layout.xml
+++ b/res/xml/notifications_layout.xml
@@ -60,6 +60,12 @@
         android:summary="@string/qs_music_tile_track_optional_summary"
         android:defaultValue="false"/>
 
+    <com.lordclockan.aicpextras.preferences.SecureSettingSwitchPreference
+        android:key="qs_battery_easy_toggle"
+        android:title="@string/qs_battery_easy_toggle_title"
+        android:summary="@string/qs_battery_easy_toggle_summary"
+        android:defaultValue="false" />
+
     <ListPreference
         android:key="sysui_qqs_count_key"
         android:title="@string/sysui_qqs_count_title"
