AE: Settings: make header_bg image also customisable (2/2)
Change-Id: Ic4a662398903dadf12e784bc78eee51cebdf12cc

--- a/res/xml/settings_layout.xml
+++ b/res/xml/settings_layout.xml
@@ -50,6 +50,12 @@
         aicpextras:unitsRight="" />
 
     <net.margaritov.preference.colorpicker.ColorPickerPreference
+        android:key="ae_header_bg_image_color"
+        android:title="@string/ae_header_bg_image_color_title"
+        android:defaultValue="@color/colorAccent"
+        android:dependency="ae_custom_colors" />
+
+    <net.margaritov.preference.colorpicker.ColorPickerPreference
         android:key="ae_nav_drawer_checked_text"
         android:title="@string/ae_nav_drawer_checked_text_title"
         android:defaultValue="@color/navDrawerTextChecked"
