--- a/res/menu/activity_main_drawer.xml
+++ b/res/menu/activity_main_drawer.xml
@@ -16,7 +16,7 @@
             <item
                 android:id="@+id/nav_headsup"
                 android:checkable="true"
-                android:icon="@drawable/ic_notif"
+                android:icon="@drawable/ic_headsup"
                 android:title="@string/nav_headsup_title" />
             <item
                 android:id="@+id/nav_notif_drawer"
