QS: Bluetooth easy toggle [1/2]
Add an option to enable single click on the Bluetooth tile to turn it on or off

Change-Id: I71649175d91d42bb7f04a0c411d0800264ad68f6

--- a/res/xml/notifications_layout.xml
+++ b/res/xml/notifications_layout.xml
@@ -61,6 +61,12 @@
         android:defaultValue="false"/>
 
     <com.lordclockan.aicpextras.preferences.SecureSettingSwitchPreference
+        android:key="qs_bt_easy_toggle"
+        android:title="@string/qs_bt_easy_toggle_title"
+        android:summary="@string/qs_bt_easy_toggle_summary"
+        android:defaultValue="false" />
+
+    <com.lordclockan.aicpextras.preferences.SecureSettingSwitchPreference
         android:key="qs_battery_easy_toggle"
         android:title="@string/qs_battery_easy_toggle_title"
         android:summary="@string/qs_battery_easy_toggle_summary"
