--- a/res/xml/notifications_layout.xml
+++ b/res/xml/notifications_layout.xml
@@ -61,6 +61,12 @@
         android:defaultValue="false"/>
 
     <com.lordclockan.aicpextras.preferences.SecureSettingSwitchPreference
+        android:key="qs_wifi_easy_toggle"
+        android:title="@string/qs_wifi_easy_toggle_title"
+        android:summary="@string/qs_wifi_easy_toggle_summary"
+        android:defaultValue="false" />
+
+    <com.lordclockan.aicpextras.preferences.SecureSettingSwitchPreference
         android:key="qs_bt_easy_toggle"
         android:title="@string/qs_bt_easy_toggle_title"
         android:summary="@string/qs_bt_easy_toggle_summary"
