AE: add System Extensions fragment
- Add System App Remover as the first entry

Change-Id: I31cf56d12c07823555a01dd322c73f45a5253764
Signed-off-by: Ali B <abittin@gmail.com>

--- a/res/menu/activity_main_drawer.xml
+++ b/res/menu/activity_main_drawer.xml
@@ -34,6 +34,11 @@
                 android:icon="@drawable/ic_lockscreen"
                 android:title="@string/lockscreen_title" />
             <item
+                android:id="@+id/nav_extensions"
+                android:checkable="true"
+                android:icon="@drawable/ic_extensions"
+                android:title="@string/extensions_title" />
+            <item
                 android:id="@+id/nav_transparency_porn"
                 android:checkable="true"
                 android:icon="@drawable/ic_opacity"
