AE: add two more snooze options
- 30 mins
- 60 mins

If you are in a meeting, dont interrupt for that long

Change-Id: If5943e1c071d6c3b26cba0b3e39557ec3a41e6ab

--- a/res/values/array.xml
+++ b/res/values/array.xml
@@ -399,6 +399,8 @@
         <item>@string/heads_up_snooze_10min</item>
         <item>@string/heads_up_snooze_15min</item>
         <item>@string/heads_up_snooze_20min</item>
+        <item>@string/heads_up_snooze_30min</item>
+        <item>@string/heads_up_snooze_60min</item>
     </string-array>
 
     <string-array name="heads_up_snooze_values" translatable="false">
@@ -409,6 +411,8 @@
         <item>600000</item>
         <item>900000</item>
         <item>1200000</item>
+        <item>1800000</item>
+        <item>3600000</item>
     </string-array>
 
     <!-- MediaScanner behavior on boot -->
