--- a/res/xml/about_layout.xml
+++ b/res/xml/about_layout.xml
@@ -30,4 +30,10 @@
         android:title="@string/stats_title"
         android:summary="@string/stats_summary"/>
 
+    <Preference
+        android:key="ae_version"
+        android:enabled="false"
+        android:title="@string/ae_version_title"
+        android:summary="@string/ae_version_summary"/>
+
 </PreferenceScreen>
