--- a/res/values-de/array.xml
+++ b/res/values-de/array.xml
@@ -22,101 +22,6 @@
       <item>Statusleiste</item>
   </string-array>
 
-  <!-- Statusbar weather font style -->
-  <string-array name="status_bar_weather_font_style_entries">
-      <item>@string/status_bar_weather_font_normal</item>
-      <item>@string/status_bar_weather_font_italic</item>
-      <item>@string/status_bar_weather_font_bold</item>
-      <item>@string/status_bar_weather_font_bold_italic</item>
-      <item>@string/status_bar_weather_font_light</item>
-      <item>@string/status_bar_weather_font_light_italic</item>
-      <item>@string/status_bar_weather_font_thin</item>
-      <item>@string/status_bar_weather_font_thin_italic</item>
-      <item>@string/status_bar_weather_font_condensed</item>
-      <item>@string/status_bar_weather_font_condensed_italic</item>
-      <item>@string/status_bar_weather_font_condensed_light</item>
-      <item>@string/status_bar_weather_font_condensed_light_italic</item>
-      <item>@string/status_bar_weather_font_condensed_bold</item>
-      <item>@string/status_bar_weather_font_condensed_bold_italic</item>
-      <item>@string/status_bar_weather_font_medium</item>
-      <item>@string/status_bar_weather_font_medium_italic</item>
-      <item>@string/status_bar_weather_font_black</item>
-      <item>@string/status_bar_weather_font_black_italic</item>
-      <item>@string/status_bar_weather_font_dancingscript</item>
-      <item>@string/status_bar_weather_font_dancingscript_bold</item>
-      <item>@string/status_bar_weather_font_comingsoon</item>
-      <item>@string/status_bar_weather_font_notoserif</item>
-      <item>@string/status_bar_weather_font_notoserif_italic</item>
-      <item>@string/status_bar_weather_font_notoserif_bold</item>
-      <item>@string/status_bar_weather_font_notoserif_bold_italic</item>
-  </string-array>
-
-  <!-- Lockscreen Weather -->
-  <string-array name="weather_condition_icon_entries">
-      <item>@string/weather_condition_icon_monochrome_title</item>
-      <item>@string/weather_condition_icon_colored_title</item>
-      <item>@string/weather_condition_icon_vclouds_title</item>
-  </string-array>
-
-  <string-array name="weather_hide_panel_entries">
-      <item>@string/weather_hide_panel_auto_title</item>
-      <item>@string/weather_hide_panel_custom_title</item>
-      <item>@string/weather_hide_panel_never_title</item>
-  </string-array>
-
-  <string-array name="weather_number_of_notifications_entries">
-      <item>@string/weather_number_of_notifications_always_title</item>
-      <item>@string/weather_number_of_notifications_two_title</item>
-      <item>@string/weather_number_of_notifications_three_title</item>
-      <item>@string/weather_number_of_notifications_four_title</item>
-      <item>@string/weather_number_of_notifications_five_title</item>
-      <item>@string/weather_number_of_notifications_six_title</item>
-   </string-array>
-
-   <!-- PA PIE -->
-   <string-array name="entries_pa_pie_size">
-       <item>@string/pa_pie_size_small</item>
-       <item>@string/pa_pie_size_default</item>
-       <item>@string/pa_pie_size_large</item>
-       <item>@string/pa_pie_size_gigantic</item>
-       <item>@string/pa_pie_size_monster</item>
-       <item>@string/pa_pie_size_enormous</item>
-   </string-array>
-
-   <string-array name="entries_pa_pie_gravity">
-       <item>@string/pa_pie_gravity_left</item>
-       <item>@string/pa_pie_gravity_right</item>
-       <item>@string/pa_pie_gravity_bottom</item>
-   </string-array>
-
-   <string-array name="entries_pa_pie_mode">
-       <item>@string/pa_pie_mode_bare</item>
-       <item>@string/pa_pie_mode_quick</item>
-       <item>@string/pa_pie_mode_default</item>
-       <item>@string/pa_pie_mode_slow</item>
-   </string-array>
-
-   <string-array name="entries_pa_pie_angle">
-       <item>@string/pa_pie_angle_none</item>
-       <item>@string/pa_pie_angle_small</item>
-       <item>@string/pa_pie_angle_big</item>
-       <item>@string/pa_pie_angle_huge</item>
-       <item>@string/pa_pie_angle_super</item>
-   </string-array>
-
-   <string-array name="entries_pa_pie_gap">
-       <item>@string/pa_pie_gap_none</item>
-       <item>@string/pa_pie_gap_small</item>
-       <item>@string/pa_pie_gap_big</item>
-       <item>@string/pa_pie_gap_huge</item>
-   </string-array>
-
-   <!-- SlimSizer -->
-   <string-array name="slimsizer_profile_array">
-       <item >Profil laden</item>
-       <item >Profil speichern</item>
-   </string-array>
-
   <!-- Toast Animation -->
   <string-array name="toast_animation_entries">
       <item>@string/toast_none_animation</item>
@@ -171,51 +76,31 @@
       <item>@string/power_menu_animation_translucent_bottom</item>
   </string-array>
 
-  <!-- Listview animation -->
-  <string-array name="listview_animation_entries">
-      <item>@string/listview_off</item>
-      <item>@string/listview_wave_left</item>
-      <item>@string/listview_wave_right</item>
-      <item>@string/listview_scale</item>
-      <item>@string/listview_alpha</item>
-      <item>@string/listview_stack_top</item>
-      <item>@string/listview_stack_bottom</item>
-      <item>@string/listview_unfold</item>
-      <item>@string/listview_fold</item>
-      <item>@string/listview_translate_left</item>
-      <item>@string/listview_translate_right</item>
+  <!-- Quick settings tiles columns and rows config -->
+  <string-array name="qs_rows_portrait_entries">
+      <item>1</item>
+      <item>2</item>
+      <item>3</item>
+      <item>4</item>
   </string-array>
 
-  <string-array name="listview_animation_values">
-      <item>0</item>
+  <string-array name="qs_rows_landscape_entries">
+      <item>1</item>
+      <item>2</item>
+      <item>3</item>
+  </string-array>
+
+  <string-array name="qs_columns_entries">
       <item>1</item>
       <item>2</item>
       <item>3</item>
       <item>4</item>
       <item>5</item>
       <item>6</item>
-      <item>7</item>
-      <item>8</item>
-      <item>9</item>
-      <item>10</item>
   </string-array>
 
-  <!-- Listview Interpolator -->
-  <string-array name="listview_interpolator_entries">
-      <item>@string/listview_off</item>
-      <item>@string/listview_accelerate_interpolator</item>
-      <item>@string/listview_decelerate_interpolator</item>
-      <item>@string/listview_accelerate_decelerate_interpolator</item>
-      <item>@string/listview_anticipate_interpolator</item>
-      <item>@string/listview_overshoot_interpolator</item>
-      <item>@string/listview_anticipate_overshoot_interpolator</item>
-      <item>@string/listview_bounce_interpolator</item>
-  </string-array>
-
-  <string-array name="listview_interpolator_values">
-      <item>0</item>
-      <item>1</item>
-      <item>2</item>
+  <!--- QS small tiles -->
+  <string-array name="sysui_qqs_count_entries">
       <item>3</item>
       <item>4</item>
       <item>5</item>
@@ -223,81 +108,51 @@
       <item>7</item>
   </string-array>
 
-  <!-- IME animations -->
-  <string-array name="anim_controls_entries">
-      <item>@string/animation_default</item>
-      <item>@string/animation_fade</item>
-      <item>@string/animation_slide_right</item>
-      <item>@string/animation_slide_left</item>
-      <item>@string/animation_slide_right_no_fade</item>
-      <item>@string/animation_slide_left_no_fade</item>
-      <item>@string/animation_slide_up</item>
-      <item>@string/animation_slide_down</item>
-      <item>@string/animation_translucent</item>
-      <item>@string/animation_grow_shrink</item>
-      <item>@string/animation_grow_shrink_center</item>
-      <item>@string/animation_grow_shrink_bottom</item>
-      <item>@string/animation_grow_shrink_left</item>
-      <item>@string/animation_grow_shrink_right</item>
-  </string-array>
-
-  <string-array name="anim_controls_values">
-      <item>0</item>
-      <item>1</item>
-      <item>2</item>
+  <string-array name="sysui_qqs_count_values">
       <item>3</item>
       <item>4</item>
       <item>5</item>
       <item>6</item>
       <item>7</item>
-      <item>8</item>
-      <item>9</item>
-      <item>10</item>
-      <item>11</item>
-      <item>12</item>
-      <item>13</item>
   </string-array>
 
-  <!-- Recent panel -->
-  <string-array name="recent_panel_expanded_mode_entries">
-      <item>@string/recent_panel_expanded_mode_auto</item>
-      <item>@string/recent_panel_expanded_mode_always</item>
-      <item>@string/recent_panel_expanded_mode_never</item>
+  <!-- Screenshot type  -->
+  <string-array name="screenshot_type_entries">
+      <item>@string/screenshot_type_fullscreen</item>
+      <item>@string/screenshot_type_partial</item>
   </string-array>
 
-  <string-array name="tab_position_entries">
-      <item>Oben</item>
-      <item>Mitte</item>
-      <item>Unten</item>
+  <!-- Immersive Recents -->
+  <string-array name="immersive_recents_entries">
+  <item>@string/immersive_recents_default</item>
+      <item>@string/immersive_recents_fullscreen</item>
+      <item>@string/immersive_recents_statusbar</item>
+      <item>@string/immersive_recents_navbar</item>
   </string-array>
 
-  <string-array name="tab_position_entryValues">
-      <item>0</item>
-      <item>1</item>
-      <item>2</item>
+  <!-- Heads up snooze -->
+  <string-array name="heads_up_snooze_entries">
+      <item>@string/heads_up_snooze_disabled</item>
+      <item>@string/heads_up_snooze_1min</item>
+      <item>@string/heads_up_snooze_3min</item>
+      <item>@string/heads_up_snooze_5min</item>
+      <item>@string/heads_up_snooze_10min</item>
+      <item>@string/heads_up_snooze_15min</item>
+      <item>@string/heads_up_snooze_20min</item>
+      <item>@string/heads_up_snooze_30min</item>
+      <item>@string/heads_up_snooze_60min</item>
   </string-array>
 
-  <string-array name="tab_size_entries">
-      <item>Klein</item>
-      <item>Mittel</item>
-      <item>Groß</item>
+  <!-- MediaScanner behavior on boot -->
+  <string-array name="media_scanner_on_boot_entries">
+      <item>@string/media_scanner_on_boot_enabled</item>
+      <item>@string/media_scanner_on_boot_ask</item>
+      <item>@string/media_scanner_on_boot_disabled</item>
   </string-array>
 
-  <string-array name="tab_size_entryValues">
-      <item>1.0</item>
-      <item>1.5</item>
-      <item>2.0</item>
+  <!-- SlimSizer -->
+  <string-array name="slimsizer_profile_array">
+      <item >Profil laden</item>
+      <item >Profil speichern</item>
   </string-array>
-
-  <string-array name="qs_num_columns_entries">
-      <item>3</item>
-      <item>4</item>
-      <item>5</item>
-  </string-array>
-
-  <string-array name="qs_num_rows_entries">
-      <item>3</item>
-      <item>4</item>
-  </string-array>
-
 </resources>
