Blur: Implement Recents Blur (1/2)
    - Added basic implementation of serajr Recents blur
    - Adapted the code in order to allow the user to change radius and scale
    - Added required flags in order to avoid Arithmetic exceptions

    Change-Id: If94c2588bbbd38219f4d79fa6b743b5036e5f8ca
    Signed-off-by: Calin <nilac8991@gmail.com>

Change-Id: I34b000467b2bcdbd4d72b3e0f9c50daa87f17e1b

--- a/res/xml/blur_ui.xml
+++ b/res/xml/blur_ui.xml
@@ -84,5 +84,24 @@
          android:summary="@string/blurred_recent_app_enabled_pref_summary"
          android:defaultValue="false"
          android:dependency="blurred_status_bar_expanded_enabled_pref" />
+
+        <com.lordclockan.aicpextras.widget.SeekBarPreferenceCham
+            android:key="recents_blur_scale"
+            android:title="@string/blurred_scale"
+            android:summary="@string/blurred_scale_summary"
+            android:max="20"
+            aicpextras:min="1"
+            android:dependency="blurred_recent_app_enabled_pref"
+            aicpextras:defaultValue="6" />
+
+        <com.lordclockan.aicpextras.widget.SeekBarPreferenceCham
+            android:key="recents_blur_radius"
+            android:title="@string/blurred_radius"
+            android:summary="@string/blurred_radius_summary"
+            android:max="25"
+            aicpextras:min="1"
+            android:dependency="blurred_recent_app_enabled_pref"
+            aicpextras:defaultValue="3" />
+
     </PreferenceCategory>
 </PreferenceScreen>
