--- a/res/values-zh-rCN/arrays.xml
+++ b/res/values-zh-rCN/arrays.xml
@@ -61,10 +61,10 @@
         <item>3</item>
     </string-array>
     <string-array name="battery_bar_entries">
-        <item>Hide</item>
-        <item>Statusbar</item>
-        <item>Top of navbar</item>
-        <item>Bottom of navbar</item>
+        <item>隐藏</item>
+        <item>状态栏</item>
+        <item>导航栏顶部</item>
+        <item>导航栏底部</item>
     </string-array>
     <string-array name="battery_bar_values">
         <item>0</item>
@@ -73,16 +73,16 @@
         <item>3</item>
     </string-array>
     <string-array name="battery_bar_no_navbar_entries">
-        <item>Hide</item>
-        <item>Statusbar</item>
+        <item>隐藏</item>
+        <item>状态栏</item>
     </string-array>
     <string-array name="battery_bar_no_navbar_values">
         <item>0</item>
         <item>1</item>
     </string-array>
     <string-array name="battery_bar_style_entries">
-        <item>Regular</item>
-        <item>Center-mirrored</item>
+        <item>正常</item>
+        <item>中心镜像</item>
     </string-array>
     <string-array name="battery_bar_style_values">
         <item>0</item>
