--- a/res/xml/blur_ui.xml
+++ b/res/xml/blur_ui.xml
@@ -82,8 +82,7 @@
          android:key="blurred_recent_app_enabled_pref"
          android:title="@string/blurred_recent_app_enabled_pref"
          android:summary="@string/blurred_recent_app_enabled_pref_summary"
-         android:defaultValue="false"
-         android:dependency="blurred_status_bar_expanded_enabled_pref" />
+         android:defaultValue="false"/>
 
         <com.lordclockan.aicpextras.widget.SeekBarPreferenceCham
             android:key="recents_blur_scale"
