AE: AppSidebar: Auto hide timeout (2/2)
Change-Id: Iec1b7d754119ceafb82446d9eb9865e396d2b9bc

--- a/res/xml/app_sidebar_settings.xml
+++ b/res/xml/app_sidebar_settings.xml
@@ -59,6 +59,17 @@
         android:defaultValue="0"
         android:dependency="sidebar_enable" />
 
+    <com.lordclockan.aicpextras.widget.SeekBarPreferenceCham
+        android:key="app_sidebar_hide_timeout"
+        android:title="@string/app_sidebar_hide_timeout_title"
+        android:summary="@string/app_sidebar_hide_timeout_summary"
+        android:max="10000"
+        aicpextras:min="0"
+        aicpextras:unitsLeft=""
+        aicpextras:unitsRight="ms"
+        android:defaultValue="3000"
+        android:dependency="sidebar_enable" />
+
     <PreferenceCategory
         android:title="@string/trigger_category" />
 
