AE: all tile scroller for quickbar settings [2/2]
Change-Id: Ied2b7873780ea1d477c1e3d5222d5f5864726f31

--- a/res/xml/notifications_layout.xml
+++ b/res/xml/notifications_layout.xml
@@ -84,6 +84,12 @@
         android:entries="@array/sysui_qqs_count_entries"
         android:entryValues="@array/sysui_qqs_count_values" />
 
+    <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
+        android:key="qs_quickbar_scroll_enabled"
+        android:title="@string/qqs_scroll_title"
+        android:summary="@string/qqs_scroll_summary"
+        android:defaultValue="false"/>
+
     <ListPreference
         android:key="qs_rows_portrait"
         android:title="@string/qs_rows_portrait_title"
