SeekBarPreferenceCham: Fix using @string reference for unitsLeft and Right
Change-Id: I30cc0a230e5ebb517fffd18813ee516cc2e42e46

--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -21,8 +21,8 @@
         <attr name="defaultVal" format="integer" />
         <attr name="maximum" format="integer" />
         <attr name="minimum" format="integer" />
-        <attr name="unitsLeft" format="string" />
-        <attr name="unitsRight" format="string" />
+        <attr name="unitsLeft" format="string|reference" />
+        <attr name="unitsRight" format="string|reference" />
         <attr name="interval" format="integer" />
     </declare-styleable>
 
