--- a/res/values/array.xml
+++ b/res/values/array.xml
@@ -541,4 +541,13 @@
          <item>3</item>
      </string-array>
 
+    <string-array name="custom_header_provider_entries" translatable="false">
+        <item>@string/daylight_header_provider_title</item>
+        <item>@string/static_header_provider_title</item>
+    </string-array>
+
+    <string-array name="custom_header_provider_values" translatable="false">
+        <item>@string/daylight_header_provider</item>
+        <item>@string/static_header_provider</item>
+    </string-array>
 </resources>
