AE: updated de-translations
Change-Id: Ie3f258dbc182bf943f2f27644c96a5ed8e5ccbce
Signed-off-by: Ralf Luther <luther.ralf@gmail.com>

--- a/res/values-de/array.xml
+++ b/res/values-de/array.xml
@@ -155,4 +155,28 @@
       <item >Profil laden</item>
       <item >Profil speichern</item>
   </string-array>
+
+  <!-- App sidebar -->
+  <string-array name="tab_position_entries">
+      <item>Oben</item>
+      <item>Mitte</item>
+      <item>Unten</item>
+  </string-array>
+  <string-array name="tab_position_entryValues">
+      <item>0</item>
+      <item>1</item>
+      <item>2</item>
+  </string-array>
+
+  <string-array name="tab_size_entries">
+      <item>Klein</item>
+      <item>Mittel</item>
+      <item>Gross</item>
+  </string-array>
+  <string-array name="tab_size_entryValues">
+      <item>1.0</item>
+      <item>1.5</item>
+      <item>2.0</item>
+  </string-array>
+
 </resources>
