--- a/res/xml/blur_ui.xml
+++ b/res/xml/blur_ui.xml
@@ -101,6 +101,31 @@
             aicpextras:min="1"
             android:dependency="blurred_recent_app_enabled_pref"
             aicpextras:defaultValue="3" />
+    </PreferenceCategory>
+    <PreferenceCategory
+        android:key="blur_colors_cat"
+        android:title="@string/blur_colors_cat">
+
+        <Preference
+            style="?android:preferenceInformationStyle"
+            android:title="@string/blur_colors_notice"
+            android:summary="@string/blur_colors_notice_summary"
+            android:selectable="false" />
+
+        <net.margaritov.preference.colorpicker.ColorPickerPreference
+            android:key="blur_light_color"
+            android:title="@string/blur_light_color"
+            android:defaultValue="0xff444444" />
+
+        <net.margaritov.preference.colorpicker.ColorPickerPreference
+            android:key="blur_dark_color"
+            android:title="@string/blur_dark_color"
+            android:defaultValue="0xffcccccc" />
+
+        <net.margaritov.preference.colorpicker.ColorPickerPreference
+            android:key="blur_mixed_color"
+            android:title="@string/blur_mixed_color"
+            android:defaultValue="0xff888888" />
 
     </PreferenceCategory>
 </PreferenceScreen>
