--- a/res/xml/various_layout.xml
+++ b/res/xml/various_layout.xml
@@ -4,6 +4,13 @@
     xmlns:aicpextras="http://schemas.android.com/apk/res/com.lordclockan.aicpextras">
 
     <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
+        android:key="show_settings_drawer"
+        android:title="@string/show_settings_drawer_title"
+        android:summaryOn="@string/show_settings_drawer_enabled"
+        android:summaryOff="@string/show_settings_drawer_disabled"
+        android:defaultValue="true" />
+
+    <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
         android:key="headset_connect_player"
         android:title="@string/headset_connect_player_title"
         android:summary="@string/headset_connect_player_summary"
