--- a/res/menu/activity_main_drawer.xml
+++ b/res/menu/activity_main_drawer.xml
@@ -24,6 +24,11 @@
                 android:icon="@drawable/ic_notif"
                 android:title="@string/notificaitons_title" />
             <item
+                android:id="@+id/nav_quick_settings"
+                android:checkable="true"
+                android:icon="@drawable/ic_quick_settings"
+                android:title="@string/quick_settings_title" />
+            <item
                 android:id="@+id/nav_recents"
                 android:checkable="true"
                 android:icon="@drawable/ic_recents"
