BlurUI: Add restore default colors preference
Change-Id: Ia97c4c5c75f0e6fa45c07288f6fb23fe1a4ca3de

--- a/res/xml/blur_ui.xml
+++ b/res/xml/blur_ui.xml
@@ -127,5 +127,9 @@
             android:title="@string/blur_mixed_color"
             android:defaultValue="0xff888888" />
 
+        <Preference
+            android:key="blur_default_colors"
+            android:title="@string/blur_default_colors_title"/>
+
     </PreferenceCategory>
 </PreferenceScreen>
