--- a/res/xml/about_layout.xml
+++ b/res/xml/about_layout.xml
@@ -11,19 +11,19 @@
         android:summary="@string/g_plus_summary"/>
 
     <Preference
-        android:key="aicp_downloads"
-        android:title="@string/aicp_downloads_title"
-        android:summary="@string/dwnld_summary"/>
-
-    <Preference
         android:key="aicp_gerrit"
         android:title="@string/aicp_gerrit_title"
         android:summary="@string/gerrit_summary"/>
 
-    <Preference
+      <Preference
         android:key="aicp_changelog"
         android:title="@string/changelog_title"
         android:summary="@string/changelog_title_summary"/>
+
+    <Preference
+        android:key="aicp_ota"
+        android:title="@string/aicp_ota_title"
+        android:summary="@string/ota_summary"/>
 
     <Preference
         android:key="aicp_stats"
