AicpExtras: replace downloads with link to OTA Centre
On official/nightly builds, OTA App exists, and it is redundant to show
Downloads in AE app again. So replace it with a shortcut with AICP_OTA .
In all other cases, show the usual Downloads Preference.

Change-Id: I2900f222f63e26330c58d4e557a5516c70d94959

--- a/res/xml/about_layout.xml
+++ b/res/xml/about_layout.xml
@@ -6,14 +6,14 @@
         android:layout="@layout/about_logo" />
 
     <Preference
+        android:key="aicp_changelog"
+        android:title="@string/changelog_title"
+        android:summary="@string/changelog_title_summary"/>
+
+    <Preference
         android:key="gplus"
         android:title="@string/g_community"
         android:summary="@string/g_plus_summary"/>
-
-    <Preference
-        android:key="aicp_downloads"
-        android:title="@string/aicp_downloads_title"
-        android:summary="@string/dwnld_summary"/>
 
     <Preference
         android:key="aicp_gerrit"
@@ -21,9 +21,19 @@
         android:summary="@string/gerrit_summary"/>
 
     <Preference
-        android:key="aicp_changelog"
-        android:title="@string/changelog_title"
-        android:summary="@string/changelog_title_summary"/>
+        android:key="aicp_ota"
+        android:title="@string/aicp_ota_title"
+        android:summary="@string/ota_summary"/>
+
+    <Preference
+        android:key="aicp_downloads"
+        android:title="@string/aicp_downloads_title"
+        android:summary="@string/dwnld_summary"/>
+
+    <Preference
+        android:key="aicp_ota"
+        android:title="@string/aicp_ota_title"
+        android:summary="@string/ota_summary"/>
 
     <Preference
         android:key="aicp_stats"
