Changelog overhaul!!! - WIP
Change-Id: I9ec222417bdd972e25eff804ff9de43c63115924

--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -23,4 +23,7 @@
     <color name="switchbar_text_color">#ffffffff</color>
     <color name="switch_accent_color">#ff7fcac3</color>
 
+    <color name="colorWhite">#fff</color>
+    <color name="colorHeaderBack">#455a64</color>
+
 </resources>
