--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -15,4 +15,7 @@
     <!-- SwitchBar margin start / end -->
     <dimen name="switchbar_margin_start">16dp</dimen>
     <dimen name="switchbar_margin_end">16dp</dimen>
+
+    <dimen name="app_bar_height">200dp</dimen>
+    <dimen name="text_margin">16dp</dimen>
 </resources>
