--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -46,4 +46,10 @@
         <item name="android:windowNoTitle">false</item>
     </style>
 
+    <style name="CollapsedAppBar" parent="@android:style/TextAppearance.Medium">
+        <item name="android:textSize">24sp</item>
+        <item name="android:textColor">@color/colorWhite</item>
+        <item name="android:textStyle">normal</item>
+    </style>
+
 </resources>
